# S3-unzip.rs

./: Cargo.toml  LICENSE  README.md  filelist-2.txt  filelist.txt  filename-generator.py  s3-unzip.sh  zip.txt
examples/: copy_test.rs
src/: main.rs  s3_helpers.rs  s3_object_reader.rs
