[package]
name = "s3-unzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
byteorder = "1.4.3"
structopt = "0.3.26"
aws-config = "0.15.0"
aws-sdk-s3 = "0.15.0"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.21", features=["executor"] }
log = { version = "0.4", features = ["release_max_level_warn"] }